[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/Smoke.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/slime.png" type="Texture" id=3]
[ext_resource path="res://Audio/slime_moving.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/slime_jump.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/bubble.wav" type="AudioStream" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.0909091, 0.313131, 0.707071, 1 )
colors = PoolColorArray( 0.992188, 0.98056, 0.98056, 1, 0.967035, 0.96875, 0.749268, 1, 0.980469, 0.657017, 0.0995789, 1, 0.992188, 0.177315, 0.0930176, 1, 0.144531, 0.0107269, 0.0107269, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, -0.359032, 0, 0, Vector2( 1, 0.185227 ), -1.83, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 16.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 25.0
scale = 16.0
scale_random = 0.2
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13.8598, 19.0468 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 48, 36 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 48, 12.025 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 35.7068, 39.1508 )

[node name="Player" type="KinematicBody2D"]
z_index = 10
z_as_relative = false
collision_mask = 4
collision/safe_margin = 0.008
script = ExtResource( 2 )
float_speed = 200
acceleration = 1500
jump_velocity = 1100
GRAVITY = 35
FRICTION = 2750

[node name="Smoke" parent="." instance=ExtResource( 1 )]
collision_layer = 8

[node name="Particles2D" parent="Smoke" index="0"]
emitting = false
process_material = SubResource( 5 )

[node name="CollisionShape2D" parent="Smoke" index="1"]
shape = SubResource( 6 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Position2D"]
position = Vector2( 1.2651, -56.4873 )
texture = ExtResource( 3 )

[node name="CollisionNormal" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.22725, -43.8244 )
shape = SubResource( 7 )
one_way_collision_margin = 0.0

[node name="SpriteSmashed" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -17.3224 )
scale = Vector2( 1, 0.25 )
texture = ExtResource( 3 )

[node name="CollisionSmashed" type="CollisionShape2D" parent="."]
position = Vector2( -2, -20 )
shape = SubResource( 8 )
disabled = true

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -1.87288, -42.3272 )
shape = SubResource( 9 )

[node name="RayFloorL" type="RayCast2D" parent="."]
position = Vector2( -45.2198, -11.9078 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 4

[node name="RayFloorC" type="RayCast2D" parent="."]
position = Vector2( -0.722347, -11.3781 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 4

[node name="RayFloorR" type="RayCast2D" parent="."]
position = Vector2( 41.9181, -11.5928 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 4

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="CotoyeTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="GasTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Tween" type="Tween" parent="."]

[node name="AudioSteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 18.0
bus = "SoundEffects"

[node name="StepsTimer" type="Timer" parent="AudioSteps"]
wait_time = 0.5
autostart = true

[node name="AudioJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="AudioGas" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
bus = "SoundEffects"
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="CotoyeTimer" to="." method="_on_CotoyeTimer_timeout"]
[connection signal="timeout" from="GasTimer" to="." method="_on_GasTimer_timeout"]
[connection signal="timeout" from="AudioSteps/StepsTimer" to="." method="_on_StepsTimer_timeout"]

[editable path="Smoke"]
